@@ -1,3 +1,8 @@
+2008-01-26  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accerciser.py: Fixed hang when enabling
+	desktop a11y through accerciser (bug #509805). Thanks Pedro Fragoso.
+
 2008-01-16  Peter Parente  <parente@cs.unc.edu>
 
 	* plugindata/validate/basic.py: Added comments
